--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/Theme.Imc"
         tools:targetApi="31">
         <activity
-            android:name=".feature.Report"
+            android:name=".features.Report"
             android:exported="false" />
         <activity
-            android:name=".feature.MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
